feat: add GetUser and GetUsers handlers, fix bugs, update deps
