# internal/api/v2/server.go
@@ -268,3 +268,48 @@ func (s *Server) Login(w http.ResponseWriter, r *http.Request) {
 	render.Status(r, http.StatusOK)
 	render.JSON(w, r, res)
 }
+
+func (s *Server) GetUser(w http.ResponseWriter, r *http.Request, id string) {
+	uid, ok := jwtauth.FromContext(r.Context())
+	if !ok {
+		renderPlainError(w, r, ErrAuthorizationRequired, http.StatusUnauthorized)
+		return
+	}
+
+	user, err := s.app.Queries.GetUser.Handle(r.Context(), request.GetUser{ActorID: uid, UserID: id})
+	if errors.Is(err, domain.ErrPermissionDenied) {
+		renderPlainError(w, r, err, http.StatusForbidden)
+		return
+	} else if errors.Is(err, ports.ErrUserNotFound) {
+		renderPlainError(w, r, err, http.StatusNotFound)
+		return
+	} else if err != nil {
+		renderInternalServerError(w, r)
+		return
+	}
+
+	res := userToAPI(user)
+	render.Status(r, http.StatusOK)
+	render.JSON(w, r, res)
+}
+
+func (s *Server) GetUsers(w http.ResponseWriter, r *http.Request) {
+	uid, ok := jwtauth.FromContext(r.Context())
+	if !ok {
+		renderPlainError(w, r, ErrAuthorizationRequired, http.StatusUnauthorized)
+		return
+	}
+
+	users, err := s.app.Queries.GetUsers.Handle(r.Context(), request.GetUsers{ActorID: uid})
+	if errors.Is(err, domain.ErrPermissionDenied) {
+		renderPlainError(w, r, err, http.StatusForbidden)
+		return
+	} else if err != nil {
+		renderInternalServerError(w, r)
+		return
+	}
+
+	res := usersToAPI(users)
+	render.Status(r, http.StatusOK)
+	render.JSON(w, r, res)
+}
