# internal/app/dto/request/get_user.go
@@ -1,0 +1,6 @@
+package request
+
+type GetUser struct {
+	ActorID string
+	UserID  string
+}
