# internal/app/dto/request/get_users.go
@@ -1,0 +1,5 @@
+package request
+
+type GetUsers struct {
+	ActorID string
+}
