# internal/app/dto/response/get_users.go
@@ -1,0 +1,5 @@
+package response
+
+import "github.com/bmstu-itstech/scriptum-back/internal/app/dto"
+
+type GetUsers = []dto.User
